# cov_flow

./: .gitignore  .mcp.json  .mcp.json.example  CLAUDE.md  Makefile  PHASE4_PLAN.md  PHASE5B_PLAN.md  README.md  REVIEW_GUIDE.md  RISK_REVIEW.md  STATUS_REPORT.md  implementation_plan.md  projects.yaml  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
docs/: getting_started.md  mcp_tool_reference.md  project_onboarding.md  project_structure.md  quick_start_checklist.md  server_setup_guide.md  testcase_gen_generic_prompt.md  user_prompt_templates.md
dv_mcp/: __init__.py
evals/: README.md  generate_case_0001.yaml  llm_execution_report.json  scenario_gen_0001.yaml  simulation_feedback_0001.yaml  triage_code_coverage_fsm.yaml  triage_code_coverage_line.yaml  triage_gap_0001.yaml
examples/: README.md  full_closure_walkthrough.md  mcp_server_setup.md  triage_walkthrough.md
lib/: __init__.py  coverage_diff.py  index_paths.py  manifest.py  project_registry.py  remote_executor.py  schema_validator.py  semantic_matcher.py  sim_executor.py  sim_log_parser.py  source_resolver.py  sv_parser.py  urg_runner.py
prompts/: phase5b_wp1_foundation_lib_prompt.md  phase5b_wp2_manifest_prompt.md  phase5b_wp3_mcp_tools_prompt.md  phase5b_wp4_cli_prompt.md  phase5b_wp5_tests_prompt.md  wp2_coding_agent_prompt.md  wp3_coding_agent_prompt.md  wp4_tb_read_source_prompt.md  wp4_testcase_gen_prompt.md
schemas/: coverage_gap.schema.json  feedback_report.schema.json  project_manifest.schema.json  scenario_card.schema.json  testcase_patch.schema.json
scripts/: build_tb_index.py  (+16 more)
(+155 files in other folders)
