[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib", "dv_mcp", "scripts"]

[project]
name = "dv-coverage-closure"
version = "0.1.0"
description = "DV AI Coverage Closure Skill Pack - mock MVP skeleton"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "mcp[cli]>=1.0.0",
    "jsonschema>=4.20.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0",
    "types-jsonschema>=4.0",
]
phase2 = [
    "markdown-it-py>=3.0.0",
    "rank_bm25>=0.2.2",
    "tree-sitter>=0.23.0",
    "tree-sitter-systemverilog>=0.1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.exceptions", "bs4", "lxml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
